assets/scripts/menus/Menu.scss
//
// Menus
//
// --------------------------------------------------------
@import '../../css/variables.scss';
@import '../../css/mixins.scss';

.menu {
  @include box-border;

  position: absolute;
  top: 45px;
  touch-action: none;
  opacity: 0;
  background: white;
  font-size: 13px;
  transform-origin: 50% 0;
  transform: rotateX(-90deg);
  transition: transform 100ms, opacity 100ms;
  pointer-events: none;
  z-index: $z-04-menu;

  /* Allows scrolling if the menu length is longer than height of viewport */
  max-height: calc(100% - 100px);
  overflow-x: hidden;
  overflow-y: auto;

  &.visible {
    transform: rotateX(0);
    opacity: 1;
    pointer-events: auto;
  }

  > a {
    display: block;
    position: relative;
    padding: 0.75em 2.5em;
    border-bottom: 1px solid $ui-colour;
    text-decoration: none;
    color: black;

    &:last-child {
      border-bottom: 0;
    }

    &:hover {
      background: fade-out($ui-colour, 0.5);
    }

    &:active {
      background: fade-out($ui-colour, 0.3);
    }
  }

  textarea,
  input {
    @include appearance(none);

    background: $form-element-background;
    border: 1px solid $form-element-border;
    resize: none;
  }

  .menu-item-icon {
    position: absolute;
    top: 0.75em;
    left: 0.75em;
    width: 16px;
    height: 16px;

    [dir="rtl"] & {
      left: auto;
      right: 0.75em;
    }
  }
}

body.safari .menu {
  transform: translateY(20px) translateZ(100px);

  &.visible {
    transform: rotateX(0) translateZ(100px);
  }
}

.menu .form {
  padding: 0.5em 1em 1em 2.5em;

  p:first-child {
    margin-top: 0;
  }

  table {
    border-collapse: collapse;
    margin: -5px;

    td {
      vertical-align: top;
      padding: 5px;
    }

    td:first-child {
      min-width: 60px;
    }
  }
}

.menu-header {
  font-weight: bold;
  margin: 0;
  font-size: 1em;
  padding: 0.5em 1em 0.5em 1.25em;
}

.menu-item-group {
  list-style: none;
  padding: 0;
  margin: 0;
  border-top: 1px solid #cde1ea;
  border-bottom: 1px solid #cde1ea;

  // Remove the top border if menu group is the first element in a menu
  &:first-child {
    border-top: 0;
  }

  // Remove the bottom border if menu group is the last element in a menu
  &:last-child {
    border-bottom: 0;
  }

  // Remove the doubling up of borders between consecutive menu groups
  + .menu-item-group {
    border-top: 0;
  }
}

.menu-item {
  display: block;
  position: relative;
  padding: 0.5em 2.5em;
  cursor: pointer;

  &:hover {
    background: fade-out($ui-colour, 0.5);
  }

  .fa-check {
    display: none;
    left: 1.25em;
    margin-top: -1px;
    width: 12px;
    height: 12px;
    color: #1c99ce;

    [dir="rtl"] & {
      left: auto;
      right: 1.25em;
    }
  }

  &.menu-item-selected .fa-check {
    display: inline-block;
  }

  &.menu-item-loading::before {
    @include loading-spinner;

    content: '';
    position: absolute;
    left: 16px;
    top: 9px;
    width: 13px;
    height: 13px;
    padding-right: 3px;
    box-sizing: border-box;
    text-align: right;
    color: #1c99ce;
    font-size: 125%;

    [dir="rtl"] & {
      left: auto;
      right: 16px;
      padding-right: auto;
      padding-left: 3px;
      text-align: left;
    }

    // Overrides loading-spinner
    border-width: 2px;
    border-top-color: #1c99ce;
    border-left-color: rgba(223, 223, 223, 0.75);
    border-right-color: rgba(223, 223, 223, 0.75);
    border-bottom-color: rgba(223, 223, 223, 0.75);
  }
}

.menu-item-subtext {
  display: block;
  margin-top: 4px;
  margin-bottom: 4px;
  line-height: 8px;
  color: rgb(128, 128, 128);
  font-size: 11px;
}

.fa-facebook,
.fa-facebook-square {
  color: #3b5998;
}

.fa-twitter {
  color: #1da1f2;
}

.fa-discord {
  color: #758fd3;
}

